# SpeedTest

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  SpeedTest.pro  SpeedTestButton.qml  colors.cpp  flash.cpp  main.cpp  main.qml  qml.qrc  speedtest.cpp  speedtest.h
android/: AndroidManifest.xml
i18n/: qml_fi_FI.ts
installer/config/: config.xml
